<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:paddingStart="8dp"
        android:text="@string/neues_medium"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:focusable="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pick_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/image_button"
            android:src="@drawable/camera_24"
            tools:ignore="MissingClass" />
    </LinearLayout>

    <View
        android:id="@+id/edit_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_green" />

    <LinearLayout
        android:id="@+id/storage_option_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Speicheroption"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/storage_option_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/storage_option_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lokal" />

            <RadioButton
                android:id="@+id/storage_option_remote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remote" />
        </RadioGroup>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/display_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="2dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_preview"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@drawable/border_background">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loeschen"
            android:textColor="@android:color/holo_green_light"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10dp"/>


        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hinzufuegen"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>

</LinearLayout>
